--- a/style.css
+++ b/style.css
@@ -127,3 +127,43 @@ margin: 23px 0px;
     transition: all 0.6s ease-in-out;
     
 }
+.btn:hover{
+    transform: translateY(-5px);
+    background: transparent;
+    color: var(--main-color);
+}
+.two{
+    background: #141414;
+    border: 2px solid #141414;
+    color: var(--text-color);
+    margin-left: 20px;
+}
+.two:hover{
+    color: #141414;
+    background: var(--text-color);
+    border: 2px solid var(--text-color);
+}
+.share{
+    position:absolute;
+    bottom: 3rem;
+    left: 15%;
+    display: flex;
+    align-items: center;
+}
+.share p{
+    font-size: 17px;
+    color: var(--text-color);
+    margin-right: 25px;
+}
+.social i{
+display: inline-flex;
+align-items: center;
+justify-content: center;
+height: 45px;
+width: 45px;
+padding: 5px 25px;
+background: linear-gradient(130.08deg, #383528 0%, #191919 100%);
+box-shadow: 0px 20px 40px #00000070;
+border: 1px solid #3b3b3b;
+border-radius: 50%;
+}
